@@ -23,6 +23,7 @@ import static org.openjdk.jmh.annotations.Threads.MAX;
 @BenchmarkMode(Mode.Throughput)
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
 @OperationsPerInvocation(2300)
+@Fork(value = 3, jvmArgs = {"--enable-native-access=ALL-UNNAMED"})
 @Threads(MAX)
 public class BenchMarkLibUring {
 
@@ -35,8 +36,6 @@ public class BenchMarkLibUring {
 
         new Runner(opt).run();
     }
-
-
 
     @Benchmark()
     public void libUringBlocking(Blackhole blackhole, ExecutionPlanBlocking plan) {
@@ -65,14 +64,16 @@ public class BenchMarkLibUring {
         final var paths = BenchmarkFiles.filesTooRead;
 
         try {
-            for (int i = 0; i < paths.length; i++) {
-                q.prepareRead(paths[i].sPath(), paths[i].bufferSize(), paths[i].offset());
+            int j = 0;
+            for (var path : paths) {
+                q.prepareRead(path.sPath(), path.bufferSize(), path.offset());
 
-                if (i % 100 == 0) {
+                j++;
+                if (j % 100 == 0) {
                     q.submit();
                 }
-
             }
+
 
             q.submit();
 
